dark mode fixes, responsive fixes

--- a/src/app/unete/unete.module.css
+++ b/src/app/unete/unete.module.css
@@ -69,12 +69,14 @@
     border-radius: 20px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 	box-shadow: 0px 10px 15px -5px rgba(0,0,0,0.65);
     cursor: pointer;
 
     display: flex;
     align-items: center;
     justify-content: space-around;
+    object-fit: cover;
 
     height: 200px;
     position: relative;
@@ -100,3 +102,12 @@
     opacity: 1;
 }
 
+@media (width <= 834px){
+	#donate_buttons_container {
+        flex-direction: column;
+	}
+
+    .donateButtons{
+        width: 350px;
+    }
+}
