--- a/src/components/unete/registerButton/registerButton.css
+++ b/src/components/unete/registerButton/registerButton.css
@@ -8,7 +8,7 @@
 }
 
 #registerButton {
-  --primary-color: var(--color);
+  color: var(--color);
   --hovered-color: var(--elaGreen);
   position: relative;
   display: flex;
